@@ -31,6 +31,8 @@ documents those changes that are of interest to users and administrators.
  -- burst_buffer/cray - Hold job after 3 failed pre-run operations.
  -- sched/backfill - Check that a user's QOS is allowed to use a partition
     before trying to schedule resources on that partition for the job.
+ -- sacctmgr - Fix displaying nodenames when printing out events or
+    reservations.
 
 * Changes in Slurm 16.05.4
 ==========================
